<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="title_radio_button_1">Glide - Image Loading Library by BumpTech</string>
    <string name="title_radio_button_2">LoadApp - Current repository by Udacity</string>
    <string name="title_radio_button_3">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="status_success">Success</string>
    <string name="status_fail">Fail</string>

    <string name="warning_select_file">Please select the file to download</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_ok">OK</string>
    <string name="button_name">Download</string>
    <string name="button_loading">We are loading</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_detail_file_name">File name:</string>
    <string name="title_detail_status">Status:</string>
</resources>
